Modificacion de componentes y nuevo componenete de panel informativo

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
       cursor: url('/src/assets/cursor.png'), auto;
     }
   </style>
+  <link rel="stylesheet" href="/src/assets/css/index.css">
 </head>
 
 <body>
