--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,11 @@
     #app {
       cursor: url('/src/assets/cursor.png'), auto;
     }
+    body{
+      background-color: white;
+      color: black
+    }
   </style>
-  <link rel="stylesheet" href="/src/assets/css/index.css">
 </head>
 
 <body>
