Componente Cargando incorporado correctamente y modificacion de componente introduccion

--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,10 @@
   <script type="module" src="../src/main.js"></script>
   <script type="javascript" src="../js/viewcontent.js"></script>
   <style>
-    #app {
-      cursor: url('/src/assets/cursor.png'), auto;
-    }
     body{
       background-color: white;
-      color: black
+      color: black;
+      cursor: url('/src/assets/cursor.cur'), auto;
     }
   </style>
 </head>
